# xepelin-mvp

./: .env  .gitignore  .prospector.yaml  Dockerfile  Procfile  README.md  asgi.py  code_check.sh  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml
mvp/: urls.py
mvp/static/js/: urlhelper.js
mvp/templates/includes/: bs4_form.html
mvp/templates/mvp/: layout.html  main.html
mvp/templates/mvp/components/: footer.html  head.html  scripts.html
mvp/templates/registration/: login.html
mvp/views/: base.py  main.py
razonamiento/: encuentra_y_multiplica.py  parentesis.py
xepelin/: settings.py  urls.py  wsgi.py
xepelin/static/css/: app-dark.min.css
