[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jose Dominguez <jndominguez@uc.cl>", "Vicente Espinosa <vtespinosa@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
psycopg2-binary = "^2.9.3"
django-extensions = "^3.1.2"
django-widget-tweaks = "^1.4.12"
prospector = "^1.7.7"
black = "^22.3.0"
isort = "^5.10.1"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
